force-app/main/default/objects/Customer_Addresses__c/Customer_Addresses__c.object-meta.xml
<CustomObject>
    <label>Customer Addresses</label>
    <nameField>
        <displayFormat>CAN-{000000}</displayFormat>
        <label>Customer Adresses Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>