force-app/main/default/objects/Customer_Addresses__c/fields/Address_1__c.field-meta.xml
<CustomField>
    <fullName>Address_1__c</fullName>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>