force-app/main/default/objects/Customer_Addresses__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>City</label>
    <referenceTo>City__c</referenceTo>
    <relationshipLabel>Customer Addresses</relationshipLabel>
    <relationshipName>Customer_Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>