force-app/main/default/objects/Customer_Addresses__c/fields/Country1__c.field-meta.xml
<CustomField>
    <fullName>Country1__c</fullName>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>