force-app/main/default/objects/Customer_Addresses__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Customer Addresses</relationshipLabel>
    <relationshipName>Customer_Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>