force-app/main/default/objects/Customer_Addresses__c/fields/District_text__c.field-meta.xml
<CustomField>
    <fullName>District_text__c</fullName>
    <label>District</label>
    <length>255</length>
    <type>Text</type>
</CustomField>