force-app/main/default/objects/Customer_Addresses__c/fields/Province_text__c.field-meta.xml
<CustomField>
    <fullName>Province_text__c</fullName>
    <label>Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>