force-app/main/default/objects/Customer_Addresses__c/fields/Ward_text__c.field-meta.xml
<CustomField>
    <fullName>Ward_text__c</fullName>
    <label>Ward</label>
    <length>255</length>
    <type>Text</type>
</CustomField>